src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ControlLinesList DeclaresList

   2  ControlLinesList : ControlLinesList ControlLine
   3                   |

   4  ControlLine : '#' DEFINE IDENTIFIER Constant NEW_LINE

   5  DeclaresList : DeclaresList Declare
   6               |

   7  Declare : ConstantDef
   8          | VariableDef
   9          | FunctionDeclare
  10          | FunctionDef

  11  ConstantDef : CONST Type InitVarList ';'

  12  InitVarList : InitVarList ',' InitVar
  13              | InitVar

  14  InitVar : IDENTIFIER '=' Constant

  15  VariableDef : Type VarComplementList ';'

  16  VarComplementList : VarComplementList ',' VarComplement
  17                    | VarComplement

  18  VarComplement : PointerMarks IDENTIFIER '[' Constant ']'
  19                | PointerMarks IDENTIFIER '=' Expr
  20                | PointerMarks IDENTIFIER

  21  PointerMarks : PointerMarks '*'
  22               |

  23  Type : INT
  24       | FLOAT
  25       | BOOL
  26       | CHAR
  27       | VOID

  28  FunctionDeclare : Type PointerMarks IDENTIFIER '(' Formals ')' ';'

  29  FunctionDef : Type PointerMarks IDENTIFIER '(' Formals ')' StmtBlock

  30  Formals : FormalsList
  31          |

  32  FormalsList : FormalsList ',' FormalDef
  33              | FormalDef

  34  FormalDef : Type PointerMarks IDENTIFIER

  35  StmtBlock : '{' StmtList '}'

  36  StmtList : StmtList Stmt
  37           |

  38  Stmt : ConstantDef
  39       | VariableDef
  40       | Expr ';'
  41       | IfStmt
  42       | WhileStmt
  43       | ForStmt
  44       | SwitchStmt
  45       | BreakStmt ';'
  46       | ReturnStmt ';'
  47       | PrintStmt ';'
  48       | ReadStmt ';'
  49       | StmtBlock
  50       | ';'

  51  ExprOpt : Expr
  52          |

  53  Call : IDENTIFIER '(' Actuals ')'

  54  Alloc : MALLOC '(' Expr ')'

  55  SizeOf : SIZEOF '(' Type PointerMarks ')'

  56  Actuals : ActualsList
  57          |

  58  ActualsList : ActualsList ',' Expr
  59              | Expr

  60  ForStmt : FOR '(' ExprOpt ';' Expr ';' ExprOpt ')' Stmt

  61  WhileStmt : WHILE '(' Expr ')' Stmt

  62  IfStmt : IF '(' Expr ')' Stmt ElseClause

  63  ElseClause : ELSE Stmt
  64             |

  65  SwitchStmt : SWITCH '(' Expr ')' '{' CaseList '}'

  66  CaseList : CaseList SingleCase
  67           | SingleCase

  68  SingleCase : CASE Constant ':' StmtList
  69             | DEFAULT ':' StmtList

  70  ReturnStmt : RETURN Expr
  71             | RETURN

  72  BreakStmt : BREAK

  73  ReadStmt : SCANF '(' LValueList ')'

  74  PrintStmt : PRINTF '(' ActualsList ')'

  75  LValueList : LValueList ',' LValue
  76             | LValue

  77  LValue : IDENTIFIER
  78         | '(' Expr ')' '[' Expr ']'
  79         | LValue '[' Expr ']'
  80         | Call '[' Expr ']'
  81         | '*' Expr
  82         | '(' LValue ')'

  83  Expr : Constant
  84       | Alloc
  85       | SizeOf
  86       | Call
  87       | LValue
  88       | SELF_ADD LValue
  89       | SELF_SUB LValue
  90       | LValue '=' Expr
  91       | LValue ADD_EQUAL Expr
  92       | LValue SUB_EQUAL Expr
  93       | LValue SELF_ADD
  94       | LValue SELF_SUB
  95       | '(' Expr ')'
  96       | Expr '+' Expr
  97       | Expr '-' Expr
  98       | Expr '*' Expr
  99       | Expr '/' Expr
 100       | Expr '%' Expr
 101       | Expr '<' Expr
 102       | Expr LESS_EQUAL Expr
 103       | Expr '>' Expr
 104       | Expr GREATER_EQUAL Expr
 105       | Expr EQUAL Expr
 106       | Expr NOT_EQUAL Expr
 107       | Expr AND Expr
 108       | Expr OR Expr
 109       | '-' Expr
 110       | '+' Expr
 111       | '!' Expr
 112       | '(' Type PointerMarks ')' Expr

 113  Constant : LITERAL
 114           | NULL

state 0
	$accept : . Program $end  (0)
	ControlLinesList : .  (3)

	.  reduce 3

	Program  goto 1
	ControlLinesList  goto 2


state 1
	$accept : Program . $end  (0)

	$end  accept


state 2
	Program : ControlLinesList . DeclaresList  (1)
	ControlLinesList : ControlLinesList . ControlLine  (2)
	DeclaresList : .  (6)

	'#'  shift 3
	$end  reduce 6
	VOID  reduce 6
	BOOL  reduce 6
	INT  reduce 6
	CHAR  reduce 6
	FLOAT  reduce 6
	CONST  reduce 6

	DeclaresList  goto 4
	ControlLine  goto 5


state 3
	ControlLine : '#' . DEFINE IDENTIFIER Constant NEW_LINE  (4)

	DEFINE  shift 6
	.  error


state 4
	Program : ControlLinesList DeclaresList .  (1)
	DeclaresList : DeclaresList . Declare  (5)

	VOID  shift 7
	BOOL  shift 8
	INT  shift 9
	CHAR  shift 10
	FLOAT  shift 11
	CONST  shift 12
	$end  reduce 1

	Declare  goto 13
	ConstantDef  goto 14
	VariableDef  goto 15
	FunctionDeclare  goto 16
	FunctionDef  goto 17
	Type  goto 18


state 5
	ControlLinesList : ControlLinesList ControlLine .  (2)

	.  reduce 2


state 6
	ControlLine : '#' DEFINE . IDENTIFIER Constant NEW_LINE  (4)

	IDENTIFIER  shift 19
	.  error


state 7
	Type : VOID .  (27)

	.  reduce 27


state 8
	Type : BOOL .  (25)

	.  reduce 25


state 9
	Type : INT .  (23)

	.  reduce 23


state 10
	Type : CHAR .  (26)

	.  reduce 26


state 11
	Type : FLOAT .  (24)

	.  reduce 24


state 12
	ConstantDef : CONST . Type InitVarList ';'  (11)

	VOID  shift 7
	BOOL  shift 8
	INT  shift 9
	CHAR  shift 10
	FLOAT  shift 11
	.  error

	Type  goto 20


state 13
	DeclaresList : DeclaresList Declare .  (5)

	.  reduce 5


state 14
	Declare : ConstantDef .  (7)

	.  reduce 7


state 15
	Declare : VariableDef .  (8)

	.  reduce 8


state 16
	Declare : FunctionDeclare .  (9)

	.  reduce 9


state 17
	Declare : FunctionDef .  (10)

	.  reduce 10


state 18
	VariableDef : Type . VarComplementList ';'  (15)
	FunctionDeclare : Type . PointerMarks IDENTIFIER '(' Formals ')' ';'  (28)
	FunctionDef : Type . PointerMarks IDENTIFIER '(' Formals ')' StmtBlock  (29)
	PointerMarks : .  (22)

	.  reduce 22

	VarComplementList  goto 21
	VarComplement  goto 22
	PointerMarks  goto 23


state 19
	ControlLine : '#' DEFINE IDENTIFIER . Constant NEW_LINE  (4)

	NULL  shift 24
	LITERAL  shift 25
	.  error

	Constant  goto 26


state 20
	ConstantDef : CONST Type . InitVarList ';'  (11)

	IDENTIFIER  shift 27
	.  error

	InitVarList  goto 28
	InitVar  goto 29


state 21
	VariableDef : Type VarComplementList . ';'  (15)
	VarComplementList : VarComplementList . ',' VarComplement  (16)

	','  shift 30
	';'  shift 31
	.  error


state 22
	VarComplementList : VarComplement .  (17)

	.  reduce 17


state 23
	VarComplement : PointerMarks . IDENTIFIER '[' Constant ']'  (18)
	VarComplement : PointerMarks . IDENTIFIER '=' Expr  (19)
	VarComplement : PointerMarks . IDENTIFIER  (20)
	PointerMarks : PointerMarks . '*'  (21)
	FunctionDeclare : Type PointerMarks . IDENTIFIER '(' Formals ')' ';'  (28)
	FunctionDef : Type PointerMarks . IDENTIFIER '(' Formals ')' StmtBlock  (29)

	IDENTIFIER  shift 32
	'*'  shift 33
	.  error


state 24
	Constant : NULL .  (114)

	.  reduce 114


state 25
	Constant : LITERAL .  (113)

	.  reduce 113


state 26
	ControlLine : '#' DEFINE IDENTIFIER Constant . NEW_LINE  (4)

	NEW_LINE  shift 34
	.  error


state 27
	InitVar : IDENTIFIER . '=' Constant  (14)

	'='  shift 35
	.  error


state 28
	ConstantDef : CONST Type InitVarList . ';'  (11)
	InitVarList : InitVarList . ',' InitVar  (12)

	','  shift 36
	';'  shift 37
	.  error


state 29
	InitVarList : InitVar .  (13)

	.  reduce 13


state 30
	VarComplementList : VarComplementList ',' . VarComplement  (16)
	PointerMarks : .  (22)

	.  reduce 22

	VarComplement  goto 38
	PointerMarks  goto 39


state 31
	VariableDef : Type VarComplementList ';' .  (15)

	.  reduce 15


state 32
	VarComplement : PointerMarks IDENTIFIER . '[' Constant ']'  (18)
	VarComplement : PointerMarks IDENTIFIER . '=' Expr  (19)
	VarComplement : PointerMarks IDENTIFIER .  (20)
	FunctionDeclare : Type PointerMarks IDENTIFIER . '(' Formals ')' ';'  (28)
	FunctionDef : Type PointerMarks IDENTIFIER . '(' Formals ')' StmtBlock  (29)

	'='  shift 40
	'('  shift 41
	'['  shift 42
	','  reduce 20
	';'  reduce 20


state 33
	PointerMarks : PointerMarks '*' .  (21)

	.  reduce 21


state 34
	ControlLine : '#' DEFINE IDENTIFIER Constant NEW_LINE .  (4)

	.  reduce 4


state 35
	InitVar : IDENTIFIER '=' . Constant  (14)

	NULL  shift 24
	LITERAL  shift 25
	.  error

	Constant  goto 43


state 36
	InitVarList : InitVarList ',' . InitVar  (12)

	IDENTIFIER  shift 27
	.  error

	InitVar  goto 44


state 37
	ConstantDef : CONST Type InitVarList ';' .  (11)

	.  reduce 11


state 38
	VarComplementList : VarComplementList ',' VarComplement .  (16)

	.  reduce 16


state 39
	VarComplement : PointerMarks . IDENTIFIER '[' Constant ']'  (18)
	VarComplement : PointerMarks . IDENTIFIER '=' Expr  (19)
	VarComplement : PointerMarks . IDENTIFIER  (20)
	PointerMarks : PointerMarks . '*'  (21)

	IDENTIFIER  shift 45
	'*'  shift 33
	.  error


state 40
	VarComplement : PointerMarks IDENTIFIER '=' . Expr  (19)

	NULL  shift 24
	LITERAL  shift 25
	MALLOC  shift 46
	SIZEOF  shift 47
	IDENTIFIER  shift 48
	SELF_ADD  shift 49
	SELF_SUB  shift 50
	'+'  shift 51
	'-'  shift 52
	'*'  shift 53
	'!'  shift 54
	'('  shift 55
	.  error

	Constant  goto 56
	Expr  goto 57
	Call  goto 58
	Alloc  goto 59
	SizeOf  goto 60
	LValue  goto 61


state 41
	FunctionDeclare : Type PointerMarks IDENTIFIER '(' . Formals ')' ';'  (28)
	FunctionDef : Type PointerMarks IDENTIFIER '(' . Formals ')' StmtBlock  (29)
	Formals : .  (31)

	VOID  shift 7
	BOOL  shift 8
	INT  shift 9
	CHAR  shift 10
	FLOAT  shift 11
	')'  reduce 31

	Type  goto 62
	Formals  goto 63
	FormalsList  goto 64
	FormalDef  goto 65


state 42
	VarComplement : PointerMarks IDENTIFIER '[' . Constant ']'  (18)

	NULL  shift 24
	LITERAL  shift 25
	.  error

	Constant  goto 66


state 43
	InitVar : IDENTIFIER '=' Constant .  (14)

	.  reduce 14


state 44
	InitVarList : InitVarList ',' InitVar .  (12)

	.  reduce 12


state 45
	VarComplement : PointerMarks IDENTIFIER . '[' Constant ']'  (18)
	VarComplement : PointerMarks IDENTIFIER . '=' Expr  (19)
	VarComplement : PointerMarks IDENTIFIER .  (20)

	'='  shift 40
	'['  shift 42
	','  reduce 20
	';'  reduce 20


state 46
	Alloc : MALLOC . '(' Expr ')'  (54)

	'('  shift 67
	.  error


state 47
	SizeOf : SIZEOF . '(' Type PointerMarks ')'  (55)

	'('  shift 68
	.  error


state 48
	Call : IDENTIFIER . '(' Actuals ')'  (53)
	LValue : IDENTIFIER .  (77)

	'('  shift 69
	AND  reduce 77
	OR  reduce 77
	LESS_EQUAL  reduce 77
	GREATER_EQUAL  reduce 77
	EQUAL  reduce 77
	NOT_EQUAL  reduce 77
	SELF_ADD  reduce 77
	SELF_SUB  reduce 77
	ADD_EQUAL  reduce 77
	SUB_EQUAL  reduce 77
	'+'  reduce 77
	'-'  reduce 77
	'*'  reduce 77
	'/'  reduce 77
	'%'  reduce 77
	'='  reduce 77
	'>'  reduce 77
	'<'  reduce 77
	','  reduce 77
	';'  reduce 77
	')'  reduce 77
	'['  reduce 77
	']'  reduce 77


state 49
	Expr : SELF_ADD . LValue  (88)

	IDENTIFIER  shift 48
	'*'  shift 53
	'('  shift 70
	.  error

	Call  goto 71
	LValue  goto 72


state 50
	Expr : SELF_SUB . LValue  (89)

	IDENTIFIER  shift 48
	'*'  shift 53
	'('  shift 70
	.  error

	Call  goto 71
	LValue  goto 73


state 51
	Expr : '+' . Expr  (110)

	NULL  shift 24
	LITERAL  shift 25
	MALLOC  shift 46
	SIZEOF  shift 47
	IDENTIFIER  shift 48
	SELF_ADD  shift 49
	SELF_SUB  shift 50
	'+'  shift 51
	'-'  shift 52
	'*'  shift 53
	'!'  shift 54
	'('  shift 55
	.  error

	Constant  goto 56
	Expr  goto 74
	Call  goto 58
	Alloc  goto 59
	SizeOf  goto 60
	LValue  goto 61


state 52
	Expr : '-' . Expr  (109)

	NULL  shift 24
	LITERAL  shift 25
	MALLOC  shift 46
	SIZEOF  shift 47
	IDENTIFIER  shift 48
	SELF_ADD  shift 49
	SELF_SUB  shift 50
	'+'  shift 51
	'-'  shift 52
	'*'  shift 53
	'!'  shift 54
	'('  shift 55
	.  error

	Constant  goto 56
	Expr  goto 75
	Call  goto 58
	Alloc  goto 59
	SizeOf  goto 60
	LValue  goto 61


state 53
	LValue : '*' . Expr  (81)

	NULL  shift 24
	LITERAL  shift 25
	MALLOC  shift 46
	SIZEOF  shift 47
	IDENTIFIER  shift 48
	SELF_ADD  shift 49
	SELF_SUB  shift 50
	'+'  shift 51
	'-'  shift 52
	'*'  shift 53
	'!'  shift 54
	'('  shift 55
	.  error

	Constant  goto 56
	Expr  goto 76
	Call  goto 58
	Alloc  goto 59
	SizeOf  goto 60
	LValue  goto 61


state 54
	Expr : '!' . Expr  (111)

	NULL  shift 24
	LITERAL  shift 25
	MALLOC  shift 46
	SIZEOF  shift 47
	IDENTIFIER  shift 48
	SELF_ADD  shift 49
	SELF_SUB  shift 50
	'+'  shift 51
	'-'  shift 52
	'*'  shift 53
	'!'  shift 54
	'('  shift 55
	.  error

	Constant  goto 56
	Expr  goto 77
	Call  goto 58
	Alloc  goto 59
	SizeOf  goto 60
	LValue  goto 61


state 55
	LValue : '(' . Expr ')' '[' Expr ']'  (78)
	LValue : '(' . LValue ')'  (82)
	Expr : '(' . Expr ')'  (95)
	Expr : '(' . Type PointerMarks ')' Expr  (112)

	VOID  shift 7
	BOOL  shift 8
	INT  shift 9
	CHAR  shift 10
	FLOAT  shift 11
	NULL  shift 24
	LITERAL  shift 25
	MALLOC  shift 46
	SIZEOF  shift 47
	IDENTIFIER  shift 48
	SELF_ADD  shift 49
	SELF_SUB  shift 50
	'+'  shift 51
	'-'  shift 52
	'*'  shift 53
	'!'  shift 54
	'('  shift 55
	.  error

	Constant  goto 56
	Type  goto 78
	Expr  goto 79
	Call  goto 58
	Alloc  goto 59
	SizeOf  goto 60
	LValue  goto 80


state 56
	Expr : Constant .  (83)

	.  reduce 83


state 57
	VarComplement : PointerMarks IDENTIFIER '=' Expr .  (19)
	Expr : Expr . '+' Expr  (96)
	Expr : Expr . '-' Expr  (97)
	Expr : Expr . '*' Expr  (98)
	Expr : Expr . '/' Expr  (99)
	Expr : Expr . '%' Expr  (100)
	Expr : Expr . '<' Expr  (101)
	Expr : Expr . LESS_EQUAL Expr  (102)
	Expr : Expr . '>' Expr  (103)
	Expr : Expr . GREATER_EQUAL Expr  (104)
	Expr : Expr . EQUAL Expr  (105)
	Expr : Expr . NOT_EQUAL Expr  (106)
	Expr : Expr . AND Expr  (107)
	Expr : Expr . OR Expr  (108)

	AND  shift 81
	OR  shift 82
	LESS_EQUAL  shift 83
	GREATER_EQUAL  shift 84
	EQUAL  shift 85
	NOT_EQUAL  shift 86
	'+'  shift 87
	'-'  shift 88
	'*'  shift 89
	'/'  shift 90
	'%'  shift 91
	'>'  shift 92
	'<'  shift 93
	','  reduce 19
	';'  reduce 19


state 58
	LValue : Call . '[' Expr ']'  (80)
	Expr : Call .  (86)

	'['  shift 94
	AND  reduce 86
	OR  reduce 86
	LESS_EQUAL  reduce 86
	GREATER_EQUAL  reduce 86
	EQUAL  reduce 86
	NOT_EQUAL  reduce 86
	SELF_ADD  reduce 86
	SELF_SUB  reduce 86
	ADD_EQUAL  reduce 86
	SUB_EQUAL  reduce 86
	'+'  reduce 86
	'-'  reduce 86
	'*'  reduce 86
	'/'  reduce 86
	'%'  reduce 86
	'='  reduce 86
	'>'  reduce 86
	'<'  reduce 86
	','  reduce 86
	';'  reduce 86
	')'  reduce 86
	']'  reduce 86


state 59
	Expr : Alloc .  (84)

	.  reduce 84


state 60
	Expr : SizeOf .  (85)

	.  reduce 85


61: shift/reduce conflict (shift 95, reduce 87) on SELF_ADD
61: shift/reduce conflict (shift 96, reduce 87) on SELF_SUB
state 61
	LValue : LValue . '[' Expr ']'  (79)
	Expr : LValue .  (87)
	Expr : LValue . '=' Expr  (90)
	Expr : LValue . ADD_EQUAL Expr  (91)
	Expr : LValue . SUB_EQUAL Expr  (92)
	Expr : LValue . SELF_ADD  (93)
	Expr : LValue . SELF_SUB  (94)

	SELF_ADD  shift 95
	SELF_SUB  shift 96
	ADD_EQUAL  shift 97
	SUB_EQUAL  shift 98
	'='  shift 99
	'['  shift 100
	AND  reduce 87
	OR  reduce 87
	LESS_EQUAL  reduce 87
	GREATER_EQUAL  reduce 87
	EQUAL  reduce 87
	NOT_EQUAL  reduce 87
	'+'  reduce 87
	'-'  reduce 87
	'*'  reduce 87
	'/'  reduce 87
	'%'  reduce 87
	'>'  reduce 87
	'<'  reduce 87
	','  reduce 87
	';'  reduce 87
	')'  reduce 87
	']'  reduce 87


state 62
	FormalDef : Type . PointerMarks IDENTIFIER  (34)
	PointerMarks : .  (22)

	.  reduce 22

	PointerMarks  goto 101


state 63
	FunctionDeclare : Type PointerMarks IDENTIFIER '(' Formals . ')' ';'  (28)
	FunctionDef : Type PointerMarks IDENTIFIER '(' Formals . ')' StmtBlock  (29)

	')'  shift 102
	.  error


state 64
	Formals : FormalsList .  (30)
	FormalsList : FormalsList . ',' FormalDef  (32)

	','  shift 103
	')'  reduce 30


state 65
	FormalsList : FormalDef .  (33)

	.  reduce 33


state 66
	VarComplement : PointerMarks IDENTIFIER '[' Constant . ']'  (18)

	']'  shift 104
	.  error


state 67
	Alloc : MALLOC '(' . Expr ')'  (54)

	NULL  shift 24
	LITERAL  shift 25
	MALLOC  shift 46
	SIZEOF  shift 47
	IDENTIFIER  shift 48
	SELF_ADD  shift 49
	SELF_SUB  shift 50
	'+'  shift 51
	'-'  shift 52
	'*'  shift 53
	'!'  shift 54
	'('  shift 55
	.  error

	Constant  goto 56
	Expr  goto 105
	Call  goto 58
	Alloc  goto 59
	SizeOf  goto 60
	LValue  goto 61


state 68
	SizeOf : SIZEOF '(' . Type PointerMarks ')'  (55)

	VOID  shift 7
	BOOL  shift 8
	INT  shift 9
	CHAR  shift 10
	FLOAT  shift 11
	.  error

	Type  goto 106


state 69
	Call : IDENTIFIER '(' . Actuals ')'  (53)
	Actuals : .  (57)

	NULL  shift 24
	LITERAL  shift 25
	MALLOC  shift 46
	SIZEOF  shift 47
	IDENTIFIER  shift 48
	SELF_ADD  shift 49
	SELF_SUB  shift 50
	'+'  shift 51
	'-'  shift 52
	'*'  shift 53
	'!'  shift 54
	'('  shift 55
	')'  reduce 57

	Constant  goto 56
	Expr  goto 107
	Call  goto 58
	Actuals  goto 108
	Alloc  goto 59
	SizeOf  goto 60
	ActualsList  goto 109
	LValue  goto 61


state 70
	LValue : '(' . Expr ')' '[' Expr ']'  (78)
	LValue : '(' . LValue ')'  (82)

	NULL  shift 24
	LITERAL  shift 25
	MALLOC  shift 46
	SIZEOF  shift 47
	IDENTIFIER  shift 48
	SELF_ADD  shift 49
	SELF_SUB  shift 50
	'+'  shift 51
	'-'  shift 52
	'*'  shift 53
	'!'  shift 54
	'('  shift 55
	.  error

	Constant  goto 56
	Expr  goto 110
	Call  goto 58
	Alloc  goto 59
	SizeOf  goto 60
	LValue  goto 80


state 71
	LValue : Call . '[' Expr ']'  (80)

	'['  shift 94
	.  error


state 72
	LValue : LValue . '[' Expr ']'  (79)
	Expr : SELF_ADD LValue .  (88)

	'['  shift 100
	AND  reduce 88
	OR  reduce 88
	LESS_EQUAL  reduce 88
	GREATER_EQUAL  reduce 88
	EQUAL  reduce 88
	NOT_EQUAL  reduce 88
	SELF_ADD  reduce 88
	SELF_SUB  reduce 88
	ADD_EQUAL  reduce 88
	SUB_EQUAL  reduce 88
	'+'  reduce 88
	'-'  reduce 88
	'*'  reduce 88
	'/'  reduce 88
	'%'  reduce 88
	'='  reduce 88
	'>'  reduce 88
	'<'  reduce 88
	','  reduce 88
	';'  reduce 88
	')'  reduce 88
	']'  reduce 88


state 73
	LValue : LValue . '[' Expr ']'  (79)
	Expr : SELF_SUB LValue .  (89)

	'['  shift 100
	AND  reduce 89
	OR  reduce 89
	LESS_EQUAL  reduce 89
	GREATER_EQUAL  reduce 89
	EQUAL  reduce 89
	NOT_EQUAL  reduce 89
	SELF_ADD  reduce 89
	SELF_SUB  reduce 89
	ADD_EQUAL  reduce 89
	SUB_EQUAL  reduce 89
	'+'  reduce 89
	'-'  reduce 89
	'*'  reduce 89
	'/'  reduce 89
	'%'  reduce 89
	'='  reduce 89
	'>'  reduce 89
	'<'  reduce 89
	','  reduce 89
	';'  reduce 89
	')'  reduce 89
	']'  reduce 89


state 74
	Expr : Expr . '+' Expr  (96)
	Expr : Expr . '-' Expr  (97)
	Expr : Expr . '*' Expr  (98)
	Expr : Expr . '/' Expr  (99)
	Expr : Expr . '%' Expr  (100)
	Expr : Expr . '<' Expr  (101)
	Expr : Expr . LESS_EQUAL Expr  (102)
	Expr : Expr . '>' Expr  (103)
	Expr : Expr . GREATER_EQUAL Expr  (104)
	Expr : Expr . EQUAL Expr  (105)
	Expr : Expr . NOT_EQUAL Expr  (106)
	Expr : Expr . AND Expr  (107)
	Expr : Expr . OR Expr  (108)
	Expr : '+' Expr .  (110)

	.  reduce 110


state 75
	Expr : Expr . '+' Expr  (96)
	Expr : Expr . '-' Expr  (97)
	Expr : Expr . '*' Expr  (98)
	Expr : Expr . '/' Expr  (99)
	Expr : Expr . '%' Expr  (100)
	Expr : Expr . '<' Expr  (101)
	Expr : Expr . LESS_EQUAL Expr  (102)
	Expr : Expr . '>' Expr  (103)
	Expr : Expr . GREATER_EQUAL Expr  (104)
	Expr : Expr . EQUAL Expr  (105)
	Expr : Expr . NOT_EQUAL Expr  (106)
	Expr : Expr . AND Expr  (107)
	Expr : Expr . OR Expr  (108)
	Expr : '-' Expr .  (109)

	.  reduce 109


state 76
	LValue : '*' Expr .  (81)
	Expr : Expr . '+' Expr  (96)
	Expr : Expr . '-' Expr  (97)
	Expr : Expr . '*' Expr  (98)
	Expr : Expr . '/' Expr  (99)
	Expr : Expr . '%' Expr  (100)
	Expr : Expr . '<' Expr  (101)
	Expr : Expr . LESS_EQUAL Expr  (102)
	Expr : Expr . '>' Expr  (103)
	Expr : Expr . GREATER_EQUAL Expr  (104)
	Expr : Expr . EQUAL Expr  (105)
	Expr : Expr . NOT_EQUAL Expr  (106)
	Expr : Expr . AND Expr  (107)
	Expr : Expr . OR Expr  (108)

	.  reduce 81


state 77
	Expr : Expr . '+' Expr  (96)
	Expr : Expr . '-' Expr  (97)
	Expr : Expr . '*' Expr  (98)
	Expr : Expr . '/' Expr  (99)
	Expr : Expr . '%' Expr  (100)
	Expr : Expr . '<' Expr  (101)
	Expr : Expr . LESS_EQUAL Expr  (102)
	Expr : Expr . '>' Expr  (103)
	Expr : Expr . GREATER_EQUAL Expr  (104)
	Expr : Expr . EQUAL Expr  (105)
	Expr : Expr . NOT_EQUAL Expr  (106)
	Expr : Expr . AND Expr  (107)
	Expr : Expr . OR Expr  (108)
	Expr : '!' Expr .  (111)

	.  reduce 111


state 78
	Expr : '(' Type . PointerMarks ')' Expr  (112)
	PointerMarks : .  (22)

	.  reduce 22

	PointerMarks  goto 111


state 79
	LValue : '(' Expr . ')' '[' Expr ']'  (78)
	Expr : '(' Expr . ')'  (95)
	Expr : Expr . '+' Expr  (96)
	Expr : Expr . '-' Expr  (97)
	Expr : Expr . '*' Expr  (98)
	Expr : Expr . '/' Expr  (99)
	Expr : Expr . '%' Expr  (100)
	Expr : Expr . '<' Expr  (101)
	Expr : Expr . LESS_EQUAL Expr  (102)
	Expr : Expr . '>' Expr  (103)
	Expr : Expr . GREATER_EQUAL Expr  (104)
	Expr : Expr . EQUAL Expr  (105)
	Expr : Expr . NOT_EQUAL Expr  (106)
	Expr : Expr . AND Expr  (107)
	Expr : Expr . OR Expr  (108)

	AND  shift 81
	OR  shift 82
	LESS_EQUAL  shift 83
	GREATER_EQUAL  shift 84
	EQUAL  shift 85
	NOT_EQUAL  shift 86
	'+'  shift 87
	'-'  shift 88
	'*'  shift 89
	'/'  shift 90
	'%'  shift 91
	'>'  shift 92
	'<'  shift 93
	')'  shift 112
	.  error


state 80
	LValue : LValue . '[' Expr ']'  (79)
	LValue : '(' LValue . ')'  (82)
	Expr : LValue .  (87)
	Expr : LValue . '=' Expr  (90)
	Expr : LValue . ADD_EQUAL Expr  (91)
	Expr : LValue . SUB_EQUAL Expr  (92)
	Expr : LValue . SELF_ADD  (93)
	Expr : LValue . SELF_SUB  (94)

	SELF_ADD  shift 95
	SELF_SUB  shift 96
	ADD_EQUAL  shift 97
	SUB_EQUAL  shift 98
	'='  shift 99
	')'  shift 113
	'['  shift 100
	AND  reduce 87
	OR  reduce 87
	LESS_EQUAL  reduce 87
	GREATER_EQUAL  reduce 87
	EQUAL  reduce 87
	NOT_EQUAL  reduce 87
	'+'  reduce 87
	'-'  reduce 87
	'*'  reduce 87
	'/'  reduce 87
	'%'  reduce 87
	'>'  reduce 87
	'<'  reduce 87


state 81
	Expr : Expr AND . Expr  (107)

	NULL  shift 24
	LITERAL  shift 25
	MALLOC  shift 46
	SIZEOF  shift 47
	IDENTIFIER  shift 48
	SELF_ADD  shift 49
	SELF_SUB  shift 50
	'+'  shift 51
	'-'  shift 52
	'*'  shift 53
	'!'  shift 54
	'('  shift 55
	.  error

	Constant  goto 56
	Expr  goto 114
	Call  goto 58
	Alloc  goto 59
	SizeOf  goto 60
	LValue  goto 61


state 82
	Expr : Expr OR . Expr  (108)

	NULL  shift 24
	LITERAL  shift 25
	MALLOC  shift 46
	SIZEOF  shift 47
	IDENTIFIER  shift 48
	SELF_ADD  shift 49
	SELF_SUB  shift 50
	'+'  shift 51
	'-'  shift 52
	'*'  shift 53
	'!'  shift 54
	'('  shift 55
	.  error

	Constant  goto 56
	Expr  goto 115
	Call  goto 58
	Alloc  goto 59
	SizeOf  goto 60
	LValue  goto 61


state 83
	Expr : Expr LESS_EQUAL . Expr  (102)

	NULL  shift 24
	LITERAL  shift 25
	MALLOC  shift 46
	SIZEOF  shift 47
	IDENTIFIER  shift 48
	SELF_ADD  shift 49
	SELF_SUB  shift 50
	'+'  shift 51
	'-'  shift 52
	'*'  shift 53
	'!'  shift 54
	'('  shift 55
	.  error

	Constant  goto 56
	Expr  goto 116
	Call  goto 58
	Alloc  goto 59
	SizeOf  goto 60
	LValue  goto 61


state 84
	Expr : Expr GREATER_EQUAL . Expr  (104)

	NULL  shift 24
	LITERAL  shift 25
	MALLOC  shift 46
	SIZEOF  shift 47
	IDENTIFIER  shift 48
	SELF_ADD  shift 49
	SELF_SUB  shift 50
	'+'  shift 51
	'-'  shift 52
	'*'  shift 53
	'!'  shift 54
	'('  shift 55
	.  error

	Constant  goto 56
	Expr  goto 117
	Call  goto 58
	Alloc  goto 59
	SizeOf  goto 60
	LValue  goto 61


state 85
	Expr : Expr EQUAL . Expr  (105)

	NULL  shift 24
	LITERAL  shift 25
	MALLOC  shift 46
	SIZEOF  shift 47
	IDENTIFIER  shift 48
	SELF_ADD  shift 49
	SELF_SUB  shift 50
	'+'  shift 51
	'-'  shift 52
	'*'  shift 53
	'!'  shift 54
	'('  shift 55
	.  error

	Constant  goto 56
	Expr  goto 118
	Call  goto 58
	Alloc  goto 59
	SizeOf  goto 60
	LValue  goto 61


state 86
	Expr : Expr NOT_EQUAL . Expr  (106)
